# Kidney-Disease-Classification-Deep-Learning-Project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  scores.json  setup.py
mlruns/0/: meta.yaml
mlruns/0/607eb53de49d42468afb80f3c4b43637/: meta.yaml
mlruns/0/607eb53de49d42468afb80f3c4b43637/metrics/: accuracy  loss
mlruns/0/607eb53de49d42468afb80f3c4b43637/outputs/m-5bfe244306c54bd09e0495b0b0cc2185/: meta.yaml
mlruns/0/607eb53de49d42468afb80f3c4b43637/tags/: mlflow.runName
mlruns/0/models/m-5bfe244306c54bd09e0495b0b0cc2185/: meta.yaml
mlruns/0/models/m-5bfe244306c54bd09e0495b0b0cc2185/artifacts/: MLmodel  conda.yaml  requirements.txt
mlruns/0/models/m-5bfe244306c54bd09e0495b0b0cc2185/metrics/: accuracy  loss
mlruns/0/models/m-5bfe244306c54bd09e0495b0b0cc2185/tags/: mlflow.source.git.commit
research/: 01_data_ingestion.ipynb  02_prepare_base_model.ipynb  03_model_training.ipynb  04_model_evaluation_with_mlflow.ipynb  trials.ipynb
src/cnnClassifier/components/: model_training.py
src/cnnClassifier/config/: configuration.py
src/cnnClassifier/entity/: config_entity.py
src/cnnClassifier/pipeline/: prediction.py
